--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             if ("serviceWorker" in navigator) {
                 window.addEventListener("load", function() {
                     navigator.serviceWorker
-                    .register("serviceWorker.js", { scope: '/' })
+                    .register("serviceWorker.js", { scope: '/Wedding-Music-App/' })
                     .then(res => console.log("service worker registered"))
                     .catch(err => console.log("service worker not registered", err))
                 })
